# gitcat

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  watcher.rs
apps/desktop/src/components/: CommitDetails.tsx  CommitGraph.tsx  ConflictResolverDialog.tsx  ContextMenu.tsx  DiffViewer.tsx  FileTree.tsx  Primitives.tsx  PromptDialog.tsx  RefSidebar.tsx  ResetDialog.tsx  SearchBar.tsx  SettingsDialog.tsx  ToastRegion.tsx  Toolbar.tsx  TopTabs.tsx  WelcomeView.tsx  WorktreePanel.tsx
apps/desktop/src/components/commit-details/: CommitDetails.tsx  CommitDetailsSkeleton.tsx  CommitMessage.tsx  CommitSections.tsx  ShaBar.tsx  SkeletonLine.tsx  index.ts
apps/desktop/src/components/conflict/: ConflictResolverDialog.tsx  ConflictResult.tsx  ConflictSide.tsx  ConflictSummary.tsx  Panel.tsx  index.ts
apps/desktop/src/components/diff/: DiffParts.tsx  DiffViewer.tsx  InlineHunk.tsx  SplitHunk.tsx  index.ts
apps/desktop/src/components/file-tree/: FileTree.tsx  FileTreeControls.tsx  TreeRow.tsx  index.ts  tree.ts
apps/desktop/src/components/menu/: MenuItem.tsx  MenuParts.tsx  MenuSurface.tsx  index.ts
apps/desktop/src/components/ref-sidebar/: RefRow.tsx  RefSection.tsx  RefSidebar.tsx  index.ts
apps/desktop/src/components/settings/: KeybindEditor.tsx  SettingsDialog.tsx  SettingsField.tsx  ThemeEditor.tsx  index.ts
apps/desktop/src/components/shell/: AppShell.tsx  Resizer.tsx  StatusBar.tsx  ViewTab.tsx  index.ts
apps/desktop/src/components/toolbar/: ConflictIndicatorButton.tsx  RepositoryContext.tsx  Toolbar.tsx  ToolbarAction.tsx  index.ts  menuKeys.ts
apps/desktop/src/components/top-tabs/: Brand.tsx  RepositoryTab.tsx  TabGroup.tsx  TopTabs.tsx  index.ts
apps/desktop/src/lib/: api.ts  conflicts.ts  demo.ts  index.ts  keybinds.ts  platform.ts  styles.ts  types.ts
crates/gitcat-contracts/: Cargo.toml
crates/gitcat-contracts/src/: error.rs  git.rs  lib.rs  workspace.rs
crates/gitcat-contracts/tests/: serde_contract.rs
crates/gitcat-core/: Cargo.toml
crates/gitcat-core/src/: api.rs  graph.rs  lib.rs  ports.rs  state.rs
crates/gitcat-git-cli/: Cargo.toml
crates/gitcat-git-cli/src/: backend.rs  lib.rs  parse.rs  runner.rs
crates/gitcat-git-cli/tests/: core_api_workflow.rs
docs/: CORE_API.md  GITKRAKEN_UX_RESEARCH.md  TAURI_INTEGRATION.md  UX_IMPLEMENTATION.md
scripts/: verify.ps1
(+15 files in other folders)
