[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/gitcat-contracts",
    "crates/gitcat-core",
    "crates/gitcat-git-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["GitCat contributors"]

[workspace.dependencies]
async-trait = "0.1"
dunce = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["serde", "v4"] }
tempfile = "3"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_JobObjects"] }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
