[package]
name = "gitcat-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
dunce.workspace = true
gitcat-contracts = { path = "../gitcat-contracts" }
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
